next refactor step