@@ -2,9 +2,11 @@ package pl.lotto.resultchecker;
 
 import java.time.Clock;
 import java.time.LocalDateTime;
+import java.util.Collections;
 import java.util.List;
-import java.util.Optional;
 import java.util.UUID;
+
+import com.mongodb.MongoException;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Component;
 import pl.lotto.numberreceiver.NumberReceiverFacade;
@@ -13,9 +15,9 @@ import pl.lotto.numberreceiver.dto.DrawDateDto;
 import pl.lotto.numberreceiver.dto.LotteryTicketDto;
 import pl.lotto.resultannouncer.UniqueTicketResultDto;
 import pl.lotto.resultchecker.dto.CheckedTicketDto;
+import pl.lotto.resultchecker.dto.CheckedTicketMapper;
 import pl.lotto.resultchecker.dto.TicketStateDto;
-import pl.lotto.resultchecker.luckyNumbersHttp.LuckyNumbersDto;
-import pl.lotto.resultchecker.luckyNumbersHttp.LuckyNumbersGeneratorClient;
+import pl.lotto.resultchecker.dto.LuckyNumbersDto;
 
 
 @Component
@@ -26,6 +28,7 @@ public class ResultCheckerFacade {
     @Autowired
     Clock clock;
     ResultCheckerRepository repository;
+    CheckedTicketMapper checkedTicketMapper;
 
     @Autowired
     public ResultCheckerFacade(NumberReceiverFacade receiverFacade,
@@ -43,39 +46,36 @@ public class ResultCheckerFacade {
         return repository.existsByDrawDate(drawDateDto.drawDate());
     }
 
-    public List<CheckedTicket> generateResult() {
+    public List<CheckedTicketDto> generateResults() {
         AllNumbersFromUsersDto allNumbersFromUsersDto = receiverFacade.userNumbersForNextDrawDate();
         if (!allNumbersFromUsersDto.tickets().isEmpty()) {
-            LocalDateTime drawDate = allNumbersFromUsersDto.tickets()
-                    .stream()
-                    .findFirst()
-                    .map(LotteryTicketDto::drawDate)
-                    .orElseThrow(DrawDateNotSpecifiedForTicketException::new);
+            LocalDateTime drawDate = retrieveDrawDate(allNumbersFromUsersDto);
             LuckyNumbersDto luckyNumbersDto = generatorClient.retrieveLuckyNumbersForDate(drawDate);
             List<CheckedTicket> checkedTickets = ticketChecker.checkAllTickets(luckyNumbersDto.winningNumbers(),
                     allNumbersFromUsersDto.tickets());
             repository.saveAll(checkedTickets);
-            return checkedTickets;
+            return checkedTicketMapper.mapCheckedTicketListOfDocumentToCheckedTicketDtoList(checkedTickets);
         }
-//        throw new IllegalArgumentException("No users numbers found")
-//        Counter counter = new Counter();
-//        LuckyNumbersDto luckyNumbersDto = generatorClient.retrieveLuckyNumbersForDate(LocalDateTime.parse("2022-02-08T12:00:00").plusDays(Counter.counter));
-//        counter.counterIncrease();
-//        System.out.println("++++++++   Przeslane od LuckyNumbersGenerator liczby: " + luckyNumbersDto + "   ++++++++");
-        return List.of(new CheckedTicket(null, null, null, null));
+        return Collections.emptyList();
     }
 
-    public UniqueTicketResultDto checkUniqueTicket(UUID id) {
-        Optional<CheckedTicket> byId = repository.findById(id);
-        if (byId.isEmpty()) {
-            return new UniqueTicketResultDto(null, TicketStateDto.NOT_FOUND);
-        }
-        CheckedTicket checkedTicket = byId.get();
-        boolean after = checkedTicket.getDrawDate().isAfter(LocalDateTime.now(clock));
-        if (after) {
+    private LocalDateTime retrieveDrawDate(AllNumbersFromUsersDto allNumbersFromUsersDto) {
+        return allNumbersFromUsersDto.tickets()
+                .stream()
+                .findFirst()
+                .map(LotteryTicketDto::drawDate)
+                .orElseThrow(DrawDateNotSpecifiedForTicketException::new);
+    }
+
+    public UniqueTicketResultDto checkIfTicketIsChecked(UUID id) {
+        CheckedTicket checkedTicket = repository.findById(id).orElseThrow(() -> {
+            throw new MongoException("The ticket has not been checked yet");
+        });
+        boolean isBeforeDraw = checkedTicket.getDrawDate().isAfter(LocalDateTime.now(clock));
+        if (isBeforeDraw) {
             return new UniqueTicketResultDto(null, TicketStateDto.TOO_EARLY);
         }
-        return new UniqueTicketResultDto(new CheckedTicketDto(checkedTicket.getLotteryId(), checkedTicket.getDrawDate(),
-                checkedTicket.getNumbersFromUser(), checkedTicket.getNumbersOfHits()), TicketStateDto.CHECKED);
+        CheckedTicketDto checkedTicketDto = checkedTicketMapper.mapCheckedTicketDocumentToCheckedTicketDto(checkedTicket);
+        return new UniqueTicketResultDto(checkedTicketDto, TicketStateDto.CHECKED);
     }
 }
